News UAT/force-app/main/default/objects/Campaign/fields/Allow_DNC_Calls__c.field-meta.xml
<CustomField>
    <fullName>Allow_DNC_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This controls visibility of DNC flagged leads in campaign execution. So if checked, reps can see leads even if the number is registered or not washed in last 30 days. 

This is used when we have implied consent, eg. retention. If unchecked, reps cannot see leads where wash date is expired or phone number has DNC flag. 

[[DEV: this may or may not be needed -depending on how this function is executed. Set for Sprint 4 to be built, using Record Type]]</description>
    <label>Allow DNC Calls</label>
    <type>Checkbox</type>
</CustomField>