News UAT/force-app/main/default/objects/Campaign/fields/Campaign_Execution__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Execution__c</fullName>
    <description>2015-04 UserStory16.3 - Mimic Campaign Execution button through formula field</description>
    <formula>IF(AND(TEXT(Status)=&quot;Launched&quot;, IsActive), 
HYPERLINK(&quot;javascript:{function f(){sforce.connection.sessionId=&#39;&quot;+$Api.Session_ID+&quot;&#39;;var e=sforce.apex.execute(&#39;GenericWebServices&#39;,&#39;userHasEditAccess&#39;,{UserId:&#39;&quot;+$User.Id+&quot;&#39;,RecordId:&#39;&quot;+Id+&quot;&#39;});if(&#39;true&#39;==e){var a=window.location.href;sforce.console.isInConsole()?(sforce.console.openPrimaryTab(null,&#39;/apex/Campaign?id=&quot;+Id+&quot;&#39;,!0,&#39;&quot;+Name+&quot;&#39;,null,&#39;&quot;+Id+&quot;&#39;),window.location.href=a,window.location.reload()):window.location.href=&#39;/apex/Campaign?id=&quot;+Id+&quot;&#39;}else alert(&#39;You have no access to Campaign Execution!&#39;)}function f1(){loadScript(&#39;/support/console/33.0/integration.js&#39;,f2)}function f2(){loadScript(&#39;/soap/ajax/33.0/connection.js&#39;,f3)}function f3(){loadScript(&#39;/soap/ajax/33.0/apex.js&#39;,f)}function loadScript(e,a){var o=document.createElement(&#39;script&#39;);o.type=&#39;text/javascript&#39;,o.readyState?o.onreadystatechange=function(){(&#39;loaded&#39;==o.readyState||&#39;complete&#39;==o.readyState)&amp;&amp;(o.onreadystatechange=null,a())}:o.onload=function(){a()},o.src=e,document.getElementsByTagName(&#39;head&#39;)[0].appendChild(o)}f1();}&quot;,&#39;Start&#39;, &#39;_self&#39;), 
&quot;Campaign is not &#39;Launched and Active&#39;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Execution</label>
    <type>Text</type>
</CustomField>