News UAT/force-app/main/default/objects/Campaign/fields/Campaign_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Pillar__c</fullName>
    <label>Campaign Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult Services</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Motoring</fullName>
            </value>
            <value>
                <fullName>Personal Notices</fullName>
            </value>
            <value>
                <fullName>Public Notices</fullName>
            </value>
            <value>
                <fullName>Retail, Amusements &amp; National Other</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Trades and Services</fullName>
            </value>
            <value>
                <fullName>Account Managed</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>