News UAT/force-app/main/default/objects/Campaign/fields/Campaign_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Team lead who is responsible for managing the campaign</inlineHelpText>
    <label>Campaign Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns_TeamLead</relationshipName>
    <type>Lookup</type>
</CustomField>