News UAT/force-app/main/default/objects/Campaign/fields/Default_Sort_Field_for_Campaign_Exec__c.field-meta.xml
<CustomField>
    <fullName>Default_Sort_Field_for_Campaign_Exec__c</fullName>
    <description>2015-05 UserStory16.3. The picklist values are referenced in Campaign Execution page.</description>
    <inlineHelpText>Define the Default Sorting Field for Campaign Execution page.</inlineHelpText>
    <label>Default Sort Field for Campaign Exec</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Last Booking Value</fullName>
            </value>
            <value>
                <fullName>CompanyOrAccount</fullName>
            </value>
            <value>
                <fullName>Execution Status</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Call Back Date</fullName>
            </value>
            <value>
                <fullName>Locked By</fullName>
            </value>
            <value>
                <fullName>Age in List</fullName>
                <default>true</default>
                <label>Age in List</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>