News UAT/force-app/main/default/objects/Campaign/fields/Default_Sort_Order_for_Campaign_Exec__c.field-meta.xml
<CustomField>
    <fullName>Default_Sort_Order_for_Campaign_Exec__c</fullName>
    <description>2015-05 UserStory16.3</description>
    <inlineHelpText>Define the Default Sorting Order for Campaign Execution page.</inlineHelpText>
    <label>Default Sort Order for Campaign Exec</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ascending</fullName>
            </value>
            <value>
                <fullName>Descending</fullName>
                <default>true</default>
                <label>Descending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>