News UAT/force-app/main/default/objects/Campaign/fields/DNC_Wash_Report_Campaign_Specific__c.field-meta.xml
<CustomField>
    <fullName>DNC_Wash_Report_Campaign_Specific__c</fullName>
    <description>Report to download Phone numbers in specific Campaigns to wash today - manually triggered. Manual wash ensures that the number of phone numbers to wash is small - quicker, and does not use up ACMA quota.

These will be phone numbers from Campaigns where the  &#39;DNC Wash&#39; was clicked today.</description>
    <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&#39;function&#39;) {srcUp(&#39;/00O90000004y0eH&#39;); } else {window.location.assign(&#39;/00O90000004y0eH&#39;) }&quot;, &quot;Open Report and Export Phone Numbers&quot;)</formula>
    <inlineHelpText>Report to download Phone numbers in specific Campaigns to wash today - manually triggered.</inlineHelpText>
    <label>Manual Wash Export</label>
    <type>Text</type>
</CustomField>