News UAT/force-app/main/default/objects/Campaign/fields/Hide_Column_from_Campaign_Exec__c.field-meta.xml
<CustomField>
    <fullName>Hide_Column_from_Campaign_Exec__c</fullName>
    <description>2015-05 UserStory16.3</description>
    <inlineHelpText>Select column(s) that should be hidden from Campaign Execution page.</inlineHelpText>
    <label>Hide Column from Campaign Exec</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Last Booking Value</fullName>
            </value>
            <value>
                <fullName>CompanyOrAccount</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Call Count</fullName>
            </value>
            <value>
                <fullName>Execution Status</fullName>
            </value>
            <value>
                <fullName>Status column</fullName>
            </value>
            <value>
                <fullName>Last Response Datetime</fullName>
            </value>
            <value>
                <fullName>Call Back Date</fullName>
            </value>
            <value>
                <fullName>Locked By</fullName>
            </value>
            <value>
                <fullName>Age in List</fullName>
            </value>
            <value>
                <fullName>Created Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>