News UAT/force-app/main/default/objects/Campaign/fields/Influence_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Influence_Percentage__c</fullName>
    <inlineHelpText>What is the percent of this campaign&#39;s Influence on the opportunity?</inlineHelpText>
    <label>Influence Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>