News UAT/force-app/main/default/objects/Campaign/fields/Last_Actioned__c.field-meta.xml
<CustomField>
    <fullName>Last_Actioned__c</fullName>
    <label>Last Actioned</label>
    <type>DateTime</type>
</CustomField>