News UAT/force-app/main/default/objects/Campaign/fields/Max_Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Call_Attempts__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Controls the maximum number of call attempts to a Campaign Member.</description>
    <inlineHelpText>Controls the maximum number of call attempts to a Campaign Member. This is a soft limit.</inlineHelpText>
    <label>Max # Call Attempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>