News UAT/force-app/main/default/objects/Campaign/fields/NEWS_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>NEWS_Campaign_Type__c</fullName>
    <description>Drives Execution UI display. E.g. Retention and Contact Plan vs other (Acquisition types)</description>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Contact Plan</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Trade Marketing</fullName>
            </value>
            <value>
                <fullName>Welcome</fullName>
            </value>
            <value>
                <fullName>Win-Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>