News UAT/force-app/main/default/objects/Campaign/fields/Notify_Group_On_Launch__c.field-meta.xml
<CustomField>
    <fullName>Notify_Group_On_Launch__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Notify Lead on Launch - email sent out to the Campaign Lead 3 days before the  Start Date of a Campaign (unless unchecked by Coordinator).</description>
    <inlineHelpText>Notify Lead on Launch - email sent out to the Campaign Lead 3 days before the  Start Date of the Campaign.</inlineHelpText>
    <label>Notify Lead On Launch</label>
    <type>Checkbox</type>
</CustomField>