News UAT/force-app/main/default/objects/Campaign/fields/Publication_Division__c.field-meta.xml
<CustomField>
    <fullName>Publication_Division__c</fullName>
    <description>Drives the filtering of Bookings in the Execution Console Action page. 

Possible to select multiple Divisions - as some Retention or Contact Plan campaign will cover multiple divisions.</description>
    <inlineHelpText>Provide a value for Retention or Contact Plan campaigns</inlineHelpText>
    <label>Publication Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>DBL</fullName>
            </value>
            <value>
                <fullName>GAD</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>HWT</fullName>
            </value>
            <value>
                <fullName>LDR</fullName>
            </value>
            <value>
                <fullName>MNG</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>NMG</fullName>
            </value>
            <value>
                <fullName>NWN</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>QNP</fullName>
            </value>
            <value>
                <fullName>QST</fullName>
            </value>
            <value>
                <fullName>NQN</fullName>
            </value>
            <value>
                <fullName>NTN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>