News UAT/force-app/main/default/objects/Campaign/fields/Total_Acquisition_Members_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Total_Acquisition_Members_Contacted__c</fullName>
    <description>For Reporting - excludes Members that are not Started</description>
    <label>Total Acquisition Members Contacted</label>
    <summaryFilterItems>
        <field>CampaignMember.Execution_Status__c</field>
        <operation>equals</operation>
        <value>Attempted, Call to Do, Call Limit Reached, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>