News UAT/force-app/main/default/objects/Campaign/fields/Total_Acquisition_Members_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Total_Acquisition_Members_to_Call__c</fullName>
    <description>For Reports - all members including ones that are DNC</description>
    <label>Total Acquisition Members to Call</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>