News UAT/force-app/main/default/objects/Campaign/fields/Total_Converted_Leads__c.field-meta.xml
<CustomField>
    <fullName>Total_Converted_Leads__c</fullName>
    <description>For Report - standard Salesforce field for Converted Lead count is not available in Reports</description>
    <label>Total Converted Leads</label>
    <summaryFilterItems>
        <field>CampaignMember.ContactId</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CampaignMember.LeadId</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>