News UAT/force-app/main/default/objects/Campaign/fields/Total_Leads__c.field-meta.xml
<CustomField>
    <fullName>Total_Leads__c</fullName>
    <description>For Report - standard Lead Count field is not accessible. Hide from Page Layout</description>
    <label>Total Leads</label>
    <summaryFilterItems>
        <field>CampaignMember.LeadId</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>