News UAT/force-app/main/default/objects/Campaign/fields/Total_Responses__c.field-meta.xml
<CustomField>
    <fullName>Total_Responses__c</fullName>
    <description>Total number of responses from the Campaign Response custom object related list.</description>
    <label>Total Responses</label>
    <summaryForeignKey>Campaign_Response__c.Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>