News UAT/force-app/main/default/objects/Campaign/fields/Total_Retention_Calls_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Retention_Calls_Completed__c</fullName>
    <description>For Reporting, uses the Campaign Responses</description>
    <label>Total Retention Calls Completed</label>
    <summaryFilterItems>
        <field>Campaign_Response__c.Membership_Final_Response__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Response__c.Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>