News UAT/force-app/main/default/objects/Campaign/fields/Wash_Status__c.field-meta.xml
<CustomField>
    <fullName>Wash_Status__c</fullName>
    <description>Is consistently used on campaigns that are washed, as a check that the wash has been completed and wash file uploaded. 

[[DEV: Preferably Automated]]</description>
    <label>Wash Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>