News UAT/force-app/main/default/objects/Campaign/recordTypes/Campaign_Coordinators.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Coordinators</fullName>
    <active>true</active>
    <description>Campaign record type to be used by CAMPAIGN COORDINATORS</description>
    <label>Campaign Coordinators</label>
</RecordType>