News UAT/force-app/main/default/objects/Campaign/recordTypes/Campaign_Field_Sales.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Field_Sales</fullName>
    <active>true</active>
    <description>Campaign record type to be used by Field Sales and Product Managers.</description>
    <label>Campaign Field Sales</label>
</RecordType>