News UAT/force-app/main/default/objects/Campaign/validationRules/Campaign_Dates_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Dates_Required</fullName>
    <active>true</active>
    <description>Provide a Start and End Date for the Campaign. Drives Launch and End Reminder to the Lead for the Campaign</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Launched&quot;),
  OR(
    ISNULL(EndDate),
    ISNULL(StartDate)
  )
)</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>Please provide the Campaign Start and End Dates</errorMessage>
</ValidationRule>