News UAT/force-app/main/default/objects/Campaign/validationRules/Launch_Campaign_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Launch_Campaign_Type</fullName>
    <active>true</active>
    <description>Campaign Type has to be provided before Launch.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Launched&quot;),
  ISPICKVAL(NEWS_Campaign_Type__c , &#39;&#39;)
)</errorConditionFormula>
    <errorDisplayField>NEWS_Campaign_Type__c</errorDisplayField>
    <errorMessage>Campaign Type has to be provided before Launch.</errorMessage>
</ValidationRule>