News UAT/force-app/main/default/objects/Campaign/listViews/All_In_Planning_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_In_Planning_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>In Planning,Ready for Review</value>
    </filters>
    <label>All In Planning Campaigns</label>
    <sharedTo>
        <group>Campaign_Coordinator</group>
    </sharedTo>
</ListView>