News UAT/force-app/main/default/objects/Campaign/listViews/HRE_Active_Campaigns.listView-meta.xml
<ListView>
    <fullName>HRE_Active_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>NQN HRE</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Launched</value>
    </filters>
    <label>HRE Active Campaigns</label>
    <sharedTo>
        <roleAndSubordinates>QLD_NQN_General_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>