News UAT/force-app/main/default/objects/Campaign/listViews/My_Launched_Campaigns.listView-meta.xml
<ListView>
    <fullName>My_Launched_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Campaign_Execution__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NEWS_Campaign_Type__c</field>
        <operation>equals</operation>
        <value>Feature Campaigns</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Launched</value>
    </filters>
    <label>My Launched Campaigns</label>
</ListView>