News UAT/force-app/main/default/objects/Campaign/listViews/Network_Focus_Campaigns1.listView-meta.xml
<ListView>
    <fullName>Network_Focus_Campaigns1</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Network</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterThan</operation>
        <value>3/1/2016</value>
    </filters>
    <label>Network Focus Campaigns</label>
    <sharedTo>
        <role>NAUS_General_Manager</role>
        <role>NAUS_NSW_Area_Manager_11</role>
        <role>NAUS_NSW_Area_Manager_2</role>
        <role>NAUS_NSW_Area_Manager_31</role>
        <role>NAUS_NSW_Area_Manager_41</role>
        <role>NAUS_NSW_FSAM101</role>
        <role>NAUS_NSW_FSAM_11</role>
        <role>NAUS_NSW_FSAM_81</role>
        <role>NAUS_NSW_GM1</role>
        <role>NAUS_NSW_Sales_Manager_10</role>
        <role>NAUS_NSW_Sales_Manager_11</role>
        <role>NAUS_NSW_Sales_Manager_61</role>
        <role>NAUS_NSW_Sales_Manager_71</role>
        <role>NAUS_NSW_Sales_Manager_81</role>
        <role>NAUS_NSW_Sales_Manager_91</role>
        <role>NAUS_Sales_Associate</role>
        <role>NAUS_Sales_Associate_Manager</role>
        <role>NAUS_VIC_Area_Manager_11</role>
        <role>NAUS_VIC_Area_Manager_21</role>
        <role>NAUS_VIC_Area_Manager_31</role>
        <role>NAUS_VIC_FSAM_11</role>
        <role>NAUS_VIC_FSAM_21</role>
        <role>NAUS_VIC_FSAM_31</role>
        <role>NAUS_VIC_FSAM_41</role>
        <role>NAUS_VIC_FSAM_51</role>
        <role>NAUS_VIC_FSAM_61</role>
        <role>NAUS_VIC_FSAM_7</role>
        <role>NAUS_VIC_GM1</role>
        <role>NAUS_VIC_Sales_Manager_11</role>
        <role>NAUS_VIC_Sales_Manager_21</role>
        <role>NAUS_VIC_Sales_Manager_31</role>
        <role>NAUS_VIC_Sales_Manager_41</role>
        <role>NAUS_VIC_Sales_Manager_51</role>
        <role>NAUS_VIC_Sales_Manager_61</role>
        <role>NAUS_VIC_Sales_Manager_7</role>
        <role>TA_WA_Area_Manager_1</role>
        <role>TA_WA_FSAM</role>
    </sharedTo>
</ListView>